--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "devDependencies": {
     "esbuild": "^0.14.10",
     "http-server": "^14.0.0",
-    "lmdb-store": "^1.6.14"
+    "lmdb-store": "^1.6.14",
+    "purescript": "^0.14.5",
+    "zephyr": "https://github.com/jonasbuntinx/zephyr.git"
+
   }
 }
